--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,108 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.JF {
+  color: hsl(26, 93%, 48%);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+:root {
+  --primary: 26 93% 48%;
+  --error: 0 90% 47%;
+  --gray-60: 0 0% 60%;
+  --dark: 0 0% 6%;
+  --light: 0 0% 96%;
+  --foreground: var(--dark);
+  --background: var(--light);
+  --fs-base: 1rem;
+  --size-base: 1rem;
+
+  --fs-xsm: calc(var(--fs-base) * 1.125);
+  --fs-sm: calc(var(--fs-base) * 1.25);
+  --fs-md: calc(var(--fs-base) * 2);
+  --fs-xxsm: calc(var(--fs-base) * 0.9);
+
+  --fw-500: 500;
+
+  --section-padding-block: clamp(1.5rem, 6vw, 4rem);
+
+  --card-paddding-sm: 1rem;
+  --card-paddding-md: 2rem;
+
+  --border: 0.0625em solid hsl(var(--primary));
+  --border-radius--xxsm: 0.125em;
+  --border-radius--xsm: 0.25em;
+  --border-radius--sm: 0.5em;
+  --border-radius--round: 100vw;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  line-height: 1;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+p {
+  margin-block: 0.25em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin-block: 0.25em;
+  font-weight: var(--fw-500);
+}
+
+ul {
+  margin-inline-start: 1.5rem;
+
+  ul {
+    margin-block-end: unset;
   }
+
+  li {
+    margin-block-start: 0.5rem;
+  }
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: var(--fs-base);
+  line-height: 1;
+  align-self: center;
+  background-color: unset;
+  border: var(--border);
+  cursor: pointer;
+}
+
+.fs-xxsm {
+  font-size: var(--fs-xxsm);
+}
+
+.fw-500 {
+  font-weight: var(--fw-500);
+}
+
+.section {
+  background-color: hsl(var(--foreground));
+  /* background-color: #557dfa; */
+  padding-block: var(--section-padding-block);
+}
+
+.container {
+  padding-inline: 3%;
+  margin-inline: auto;
+  /* max-width: 90rem; */
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
